fix footer text on theme settings overlapping with the input fields

--- a/css/back-style.css
+++ b/css/back-style.css
@@ -242,3 +242,4 @@ input#secondary-save-post {float: left;}
     margin-bottom: -11px;
 }
 /** End of Shortcode Preview Styles **/
+.wp-admin #wpfooter { position: relative; }
